# simple_vcf_comparison

./: .gitignore  1. compare_vcfs.py  2. rename_output.py  3. annovar scripts.py  3. create_excel_difference.py  4. annotate_differences_vcf.py  4. create_excel_difference.py  BED_RRMS_hg38.bed  BRCA_genes.bed  HCS_region_map.bed.gz.tbi  LICENSE  README.md  a. create_guide_and_legend.py  bed_selector.py  intersezione.bed  prova_hgvs.py  pyproject.toml  unlifted.bed  vcf_dataframer.py  vcf_reader.py
bed_files/: BED_RRMS_hg38_filled.bed  BED_RRMS_hg38_original.bed  Devyser_BRCA_hg19.bed  Devyser_BRCA_hg19_chrless.bed  HC_genes.bed  NANOPORE_HC_BED_hg19.bed  bed_nanopore_hg19_chr.bed  bed_nanopore_hg19_chrless.bed  brca_devyser_nanopore_hg19_chr.bed  brca_devyser_nanopore_hg19_chrless.bed  brca_hg19_uscs_copy.bed  brca_hg38_uscs.bed  chr_converter.py  hc_hg38_uscs.bed  hc_sophia_nanopore_hg19.bed  nanopore_devyser_hg19.bed  nanopore_hc_hg19.bed
bed_files/prova/: bed_nanopore_hg38.bed  bed_uscs_brca_hg38.bed  bed_uscs_brca_hg38_intestato.bed  brca_hg38.bed  brca_hg38_intestato.bed
bed_files/raw/: brca_hg38.bed  hc_hg38.bed
maps/: chromosome_mappings.txt
utils and debug scripts/: excel_creator.py
