[tool.poetry]
name = "vcf-compare-env"
version = "0.1.0"
description = ""
authors = ["AlessandroKuz <akuzcontact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hgvs = "1.5.0"
pandas = "^2.2.2"
setuptools = "^70.0.0"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
